let there be harmony

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Chordisto</string>
+    <string name="playButtonText">Play the thing!</string>
 </resources>
