--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Chordisto</string>
     <string name="playButtonText">Play the thing!</string>
+    <string name="chord_input_hint">Type in some chords, separate with commas</string>
 </resources>
