--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Chordisto</string>
     <string name="playButtonText">Play the thing!</string>
     <string name="chord_input_hint">Type in some chords, separate with commas</string>
+    <string name="tempo_hint">Tempo</string>
 </resources>
