refactor activity to tidy--use for loop to control beats per chord

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="playButtonText">Play the thing!</string>
     <string name="chord_input_hint">Type in some chords, separate with commas</string>
     <string name="tempo_hint">Tempo</string>
+    <string name="number_of_loops_hint">How many loops?</string>
 </resources>
